Fixed 'Manage' button on '/register' page (it's now visible). TODOs added.

--- a/site/fizlesh.ru-design/admin.css
+++ b/site/fizlesh.ru-design/admin.css
@@ -9,21 +9,6 @@ img.preview  {
   border: 0px;
 }
 
-a.linkButton {
-  font-size: 12pt;
-  line-height: 16pt;
-  text-decoration: none;
-  display: inline-block;
-  margin: 1px 0px 3px 1px;
-  border: 1px solid #003f00;
-  padding-left: 7px;
-  padding-right: 7px;
-  background-color: #8ea76b;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-}
-
 input.meta {
   width: 800px;
 }
