--- a/site/fizlesh.ru-design/default.css
+++ b/site/fizlesh.ru-design/default.css
@@ -174,3 +174,18 @@ a.leshLogoTitle {
   right: 7px;
   bottom: 5px;
 }
+
+a.linkButton {
+  font-size: 12pt;
+  line-height: 16pt;
+  text-decoration: none;
+  display: inline-block;
+  margin: 1px 0px 3px 1px;
+  border: 1px solid #003f00;
+  padding-left: 7px;
+  padding-right: 7px;
+  background-color: #8ea76b;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
